Fix merge spacing conflicts

--- a/src/components/DisplayProfileInfo/DisplayProfileInfo.module.scss
+++ b/src/components/DisplayProfileInfo/DisplayProfileInfo.module.scss
@@ -14,7 +14,7 @@ li {
 .editProfile {
   padding: 1rem;
   color: $black;
-  margin: 0 2rem;
+  margin: 2rem;
 
   .about {
     margin-top: 60px;
