--- a/src/components/EditProfileInfo/EditProfileInfo.module.scss
+++ b/src/components/EditProfileInfo/EditProfileInfo.module.scss
@@ -13,7 +13,7 @@ li {
 .editProfile {
   padding: 1rem;
   color: $black;
-  margin: 0 2rem;
+  margin: 0 2rem 2rem;
 
   .about {
     margin-top: 60px;
