--- a/src/components/PrivateProfilePage/PrivateProfilePage.module.scss
+++ b/src/components/PrivateProfilePage/PrivateProfilePage.module.scss
@@ -9,11 +9,6 @@
   color: inherit;
 }
 
-section {
-  height: 90vh;
-  margin-bottom: 10vh;
-}
-
 a {
   text-decoration: none;
 }
