--- a/src/components/ProfileBottom/ProfileBottom.module.scss
+++ b/src/components/ProfileBottom/ProfileBottom.module.scss
@@ -5,12 +5,13 @@
   height: 50%;
   background-color: $white;
   color: $black;
-  margin-bottom: 8rem;
+  margin-top: 2.5rem;
+  margin-bottom: 7rem;
 
   img {
     width: 100%;
     height: 100%;
-    border-radius: 20px;;
+    border-radius: 20px;
   }
 }
 
@@ -36,15 +37,13 @@
       margin: 0 1rem;
     }
   }
-
 }
 
 .ClothingImage {
   height: 45%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr) ;
+  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  
 }
 
 .switch {
@@ -59,7 +58,6 @@
     height: 0;
     border-radius: 50%;
   }
-
 }
 
 .slider {
@@ -69,21 +67,21 @@
   right: 0;
   bottom: 0;
   background: $grey-primary;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   border-radius: 30px;
 }
 
 .slider:before {
   position: absolute;
-  content: "";
+  content: '';
   height: 18px;
   width: 18px;
   left: 2px;
   bottom: 1.5px;
   background-color: $white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   border-radius: 50%;
 }
 
